2005-06-26  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/plugin.scm, test/plugin.scm:
	  fixed a bug that loads object that is same name as given one
	  in another module.

2005-06-04  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm:
	Added text.tree module.

2005-06-01  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.3.2
	- Fixed bug which disabled using with new Gauche-0.8.4.

2005-04-20  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/elem.scm (b/, i/): fixed typo arg -> args

2005-04-12  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/session.scm (make-state-key, make-cont-key): 
	- fixed a bug of the case where a duplicated key are generated.

2005-03-23  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/persistence.scm:
	- refactored a mecanism to provide in-db in-memory consistency.
	Now, all in-memory objects obtained from db are managed over
	transactions. However, the write-syncer mechanism dose not 
	support yet.
	

2005-02-09  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/persistence.scm: 
	added a mechanism to provide cache consistency.
	see [kahua-dev: 00870, 00871, 00874, 00885-00888] for detail.
	
2005-02-09 Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.3.1:
	- Gauche 0.8.3 or later required.
	- (kahua-spvr): Fixed for the case if the platform has both ipv4 
	and ipv6 interface.
	- (kahua-spvr): Added version command to show kahua version.
	- (kahua-server): Made to log when startup and exit on signals.
	- (kahua-admin): Enabled batch execution---just give an admin 
	command in the command line and it is executed immediately.
	- (kahua.cgi): Introduced <response> class to represent http response
	instead of response dispatcher
	- (kahua.server): Duplicate default-element-handler: one is for 
	non-terminated HTML tags (e.g.img, br, etc) and emits empty
	XHTML tag (e.g. <img />) instead of <img></img>. The other is
	for rss feeding by <link> elements, which is recognized non-terminated
	tag in HTML.